tests/regression/errors/less_than_handler.eff
(handler x -> 2 * x) < (handler x -> 3 * x) ;;
